Readme new instructions, test added and new assignment error
