# route/assignmentRoutes.js
@@ -2,16 +2,20 @@ const Db = require("../models/db.js");
 const assignment = require("../models/assignment.js");
 
 exports.sendAssignmentById = function (req, res) {
-	var new_id = Db.getAll.length;
-	var new_obj;
+	var new_id = Db.getAll().length;
+	var new_obj, studentId, assignmentId, assignmentType, assignmentContent;
 	assignmentId = new_id;
 	studentId = req.body.studentId;
 	assignmentType = req.body.assignment_type;
 	assignmentContent= req.body.assignment_content;
  	new_obj = new assignment(assignmentId, studentId, assignmentType, assignmentContent);
  	//console.log("NODE: " + JSON.stringify(new_obj));
-	Db.insert(new_obj);
-	return res.json({message: 'Assignment aggiunto'});
+ 	if(studentId == undefined || assignmentType == undefined || assignmentContent == undefined)
+ 		res.json({message: 'Assignment non aggiunto'});
+ 	else{
+		Db.insert(new_obj);
+		return res.json({message: 'Assignment aggiunto', assignmentId: assignmentId});
+	}
 };
 
 exports.getAllAssignments = function(req, res) {
@@ -36,7 +40,6 @@ exports.getAssignmentById = function(req, res) {
 	var id = req.params.id;
 	var found = Db.getById(id);
 	if (found !== undefined){
-		res.sendStatus(200);
 		return res.json(Db.getById(id));
 	} else {
 		return res.json({message: 'Assignment non trovato'});
